--- a/src/4.inference.ipynb
+++ b/src/4.inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "fd5830c0",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "dd1b6001",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "31a3717c",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "b5cd0b26",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "d3ffa6b0",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "3dae9bab",
    "metadata": {},
    "outputs": [
@@ -126,76 +126,76 @@
      "text": [
       "RSSI   ETX   Delay  Busy   Classe   Status   Confiança \n",
       "-------------------------------------------------------\n",
-      "-89    4.9   47     0.43   0        Ruim     1.00      \n",
-      "-87    8.3   74     0.44   0        Ruim     1.00      \n",
-      "-82    6.9   98     0.34   0        Ruim     1.00      \n",
-      "-70    9.6   76     0.93   0        Ruim     1.00      \n",
-      "-62    8.7   61     0.82   0        Ruim     1.00      \n",
-      "-73    8.9   36     0.91   0        Ruim     1.00      \n",
-      "-80    4.7   62     0.74   0        Ruim     1.00      \n",
-      "-60    6.6   100    0.47   0        Ruim     1.00      \n",
-      "-77    9.9   78     0.43   0        Ruim     1.00      \n",
-      "-89    9.5   78     0.86   0        Ruim     1.00      \n",
-      "-95    8.3   98     0.57   0        Ruim     1.00      \n",
-      "-72    9.5   68     0.52   0        Ruim     1.00      \n",
-      "-90    7.5   48     0.90   0        Ruim     1.00      \n",
-      "-88    5.1   76     0.97   0        Ruim     1.00      \n",
-      "-85    8.9   79     0.87   0        Ruim     1.00      \n",
-      "-78    4.3   81     0.33   0        Ruim     1.00      \n",
-      "-78    4.7   37     0.40   0        Ruim     0.94      \n",
-      "-88    7.9   82     0.37   0        Ruim     1.00      \n",
-      "-88    9.1   47     0.35   0        Ruim     1.00      \n",
-      "-85    8.8   99     0.94   0        Ruim     1.00      \n",
-      "-69    8.9   71     0.66   0        Ruim     1.00      \n",
-      "-68    8.7   71     0.98   0        Ruim     1.00      \n",
-      "-79    5.2   78     0.33   0        Ruim     1.00      \n",
-      "-90    5.7   62     0.95   0        Ruim     1.00      \n",
-      "-90    6.0   75     0.81   0        Ruim     1.00      \n",
-      "-66    8.4   45     0.34   0        Ruim     1.00      \n",
-      "-63    7.2   65     0.58   0        Ruim     1.00      \n",
-      "-72    5.1   87     0.96   0        Ruim     1.00      \n",
-      "-73    9.7   33     0.69   0        Ruim     1.00      \n",
-      "-81    6.5   56     0.66   0        Ruim     1.00      \n",
-      "-75    6.4   67     0.78   0        Ruim     1.00      \n",
-      "-81    9.3   53     0.78   0        Ruim     1.00      \n",
-      "-60    8.3   85     0.38   0        Ruim     1.00      \n",
-      "-86    5.6   97     0.87   0        Ruim     1.00      \n",
-      "-73    8.1   76     0.87   0        Ruim     1.00      \n",
-      "-62    5.1   89     0.64   0        Ruim     1.00      \n",
-      "-62    4.5   41     0.91   0        Ruim     1.00      \n",
-      "-73    9.9   95     0.46   0        Ruim     1.00      \n",
-      "-69    8.2   39     0.91   0        Ruim     1.00      \n",
-      "-74    5.8   56     0.99   0        Ruim     1.00      \n",
-      "-82    7.7   85     0.86   0        Ruim     1.00      \n",
-      "-78    6.8   91     0.59   0        Ruim     1.00      \n",
-      "-80    8.7   47     0.69   0        Ruim     1.00      \n",
-      "-85    8.1   68     0.89   0        Ruim     1.00      \n",
-      "-76    10.0  96     0.84   0        Ruim     1.00      \n",
-      "-62    7.8   76     0.46   0        Ruim     1.00      \n",
-      "-74    8.8   91     0.75   0        Ruim     1.00      \n",
-      "-74    8.0   48     0.89   0        Ruim     1.00      \n",
-      "-64    6.8   99     0.60   0        Ruim     1.00      \n",
-      "-67    9.4   35     0.80   0        Ruim     1.00      \n",
-      "-67    5.2   81     0.59   0        Ruim     1.00      \n",
-      "-61    8.4   73     0.98   0        Ruim     1.00      \n",
-      "-87    9.5   46     0.88   0        Ruim     1.00      \n",
-      "-65    7.9   98     0.88   0        Ruim     1.00      \n",
-      "-81    8.0   71     0.97   0        Ruim     1.00      \n",
-      "-86    6.3   77     0.66   0        Ruim     1.00      \n",
-      "-70    9.0   35     0.77   0        Ruim     1.00      \n",
-      "-93    7.9   85     0.37   0        Ruim     1.00      \n",
-      "-83    5.8   32     0.39   0        Ruim     0.98      \n",
-      "-76    6.1   58     0.98   0        Ruim     1.00      \n",
-      "-74    9.6   72     0.58   0        Ruim     1.00      \n",
-      "-91    9.0   78     0.70   0        Ruim     1.00      \n",
-      "-60    6.1   80     0.60   0        Ruim     1.00      \n",
-      "-67    5.8   30     0.30   0        Ruim     0.73      \n",
-      "-71    7.4   72     0.50   0        Ruim     1.00      \n",
-      "-94    8.5   51     0.81   0        Ruim     1.00      \n",
-      "-65    6.2   60     0.81   0        Ruim     1.00      \n",
-      "-94    9.6   90     0.92   0        Ruim     1.00      \n",
-      "-88    4.4   41     0.53   0        Ruim     1.00      \n",
-      "-88    6.1   78     0.87   0        Ruim     1.00      \n"
+      "-72    8.6   83     0.69   0        Ruim     1.00      \n",
+      "-84    3.6   37     0.71   0        Ruim     0.99      \n",
+      "-89    8.8   63     0.45   0        Ruim     1.00      \n",
+      "-36    3.0   22     0.20   1        Bom      1.00      \n",
+      "-58    4.8   53     0.75   0        Ruim     1.00      \n",
+      "-57    1.5   22     0.37   1        Bom      0.99      \n",
+      "-83    7.4   89     0.37   0        Ruim     1.00      \n",
+      "-67    6.5   86     0.51   0        Ruim     1.00      \n",
+      "-50    3.6   23     0.26   1        Bom      0.98      \n",
+      "-68    5.2   40     0.90   0        Ruim     1.00      \n",
+      "-87    9.6   65     0.66   0        Ruim     1.00      \n",
+      "-32    3.0   23     0.21   1        Bom      1.00      \n",
+      "-62    4.2   87     0.92   0        Ruim     1.00      \n",
+      "-67    3.2   36     0.32   1        Bom      0.82      \n",
+      "-65    3.0   36     0.22   1        Bom      0.94      \n",
+      "-37    2.5   31     0.29   1        Bom      1.00      \n",
+      "-34    2.7   32     0.27   1        Bom      1.00      \n",
+      "-61    1.7   26     0.32   1        Bom      0.98      \n",
+      "-74    8.4   64     0.49   0        Ruim     1.00      \n",
+      "-82    9.1   84     0.47   0        Ruim     1.00      \n",
+      "-62    3.4   88     0.70   0        Ruim     1.00      \n",
+      "-75    9.1   39     0.87   0        Ruim     1.00      \n",
+      "-50    1.3   15     0.04   1        Bom      1.00      \n",
+      "-34    2.4   24     0.12   1        Bom      1.00      \n",
+      "-43    2.7   25     0.06   1        Bom      1.00      \n",
+      "-69    3.6   38     0.77   0        Ruim     0.99      \n",
+      "-60    7.4   40     0.44   0        Ruim     0.99      \n",
+      "-60    3.6   16     0.03   1        Bom      0.99      \n",
+      "-73    7.4   46     0.55   0        Ruim     1.00      \n",
+      "-35    2.2   40     0.37   1        Bom      0.99      \n",
+      "-59    7.9   35     0.27   0        Ruim     0.94      \n",
+      "-83    8.7   91     0.55   0        Ruim     1.00      \n",
+      "-58    4.9   37     0.28   1        Bom      0.76      \n",
+      "-61    2.5   24     0.34   1        Bom      0.97      \n",
+      "-62    2.7   37     0.28   1        Bom      0.94      \n",
+      "-80    3.5   87     0.53   0        Ruim     1.00      \n",
+      "-38    1.2   18     0.30   1        Bom      1.00      \n",
+      "-59    3.4   40     0.37   1        Bom      0.80      \n",
+      "-46    3.2   6      0.18   1        Bom      1.00      \n",
+      "-52    2.2   3      0.34   1        Bom      1.00      \n",
+      "-42    1.2   29     0.06   1        Bom      1.00      \n",
+      "-58    3.9   3      0.13   1        Bom      0.99      \n",
+      "-63    8.4   52     0.43   0        Ruim     1.00      \n",
+      "-66    4.7   38     0.31   0        Ruim     0.56      \n",
+      "-65    5.8   60     0.76   0        Ruim     1.00      \n",
+      "-64    1.6   5      0.31   1        Bom      0.99      \n",
+      "-87    8.1   87     0.32   0        Ruim     1.00      \n",
+      "-84    8.6   30     0.76   0        Ruim     1.00      \n",
+      "-31    1.0   10     0.07   1        Bom      1.00      \n",
+      "-56    2.6   39     0.06   1        Bom      0.99      \n",
+      "-31    3.6   6      0.14   1        Bom      1.00      \n",
+      "-55    4.0   93     0.39   0        Ruim     0.98      \n",
+      "-63    5.4   23     0.37   0        Ruim     0.51      \n",
+      "-62    8.2   88     0.66   0        Ruim     1.00      \n",
+      "-62    1.3   10     0.15   1        Bom      1.00      \n",
+      "-54    3.2   36     0.41   1        Bom      0.88      \n",
+      "-36    2.6   32     0.32   1        Bom      0.99      \n",
+      "-68    9.0   79     0.32   0        Ruim     1.00      \n",
+      "-73    5.8   63     0.49   0        Ruim     1.00      \n",
+      "-52    2.5   28     0.02   1        Bom      1.00      \n",
+      "-61    9.2   50     0.30   0        Ruim     1.00      \n",
+      "-83    9.7   52     0.45   0        Ruim     1.00      \n",
+      "-75    7.0   61     0.74   0        Ruim     1.00      \n",
+      "-59    2.5   4      0.19   1        Bom      1.00      \n",
+      "-67    3.3   85     0.76   0        Ruim     1.00      \n",
+      "-30    1.2   3      0.16   1        Bom      1.00      \n",
+      "-76    2.2   17     0.18   1        Bom      0.97      \n",
+      "-46    2.6   27     0.11   1        Bom      1.00      \n",
+      "-43    1.4   33     0.05   1        Bom      1.00      \n",
+      "-38    2.0   22     0.01   1        Bom      1.00      \n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "id": "78efbb23",
    "metadata": {},
    "outputs": [
