--- a/src/2.dataset.ipynb
+++ b/src/2.dataset.ipynb
@@ -145,7 +145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.9.6)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
