--- a/src/3.train.ipynb
+++ b/src/3.train.ipynb
@@ -141,11 +141,11 @@
      "text": [
       "Epoch    Loss       Train Acc    Test Acc  \n",
       "------------------------------------------\n",
-      "0        0.8256     0.1356       0.1953    \n",
-      "10       0.3531     0.9695       0.9700    \n",
-      "20       0.1322     0.9712       0.9717    \n",
-      "30       0.0783     0.9739       0.9742    \n",
-      "40       0.0625     0.9770       0.9774    \n"
+      "0        0.9134     0.0400       0.0637    \n",
+      "10       0.4772     0.9498       0.9513    \n",
+      "20       0.2277     0.9639       0.9631    \n",
+      "30       0.1150     0.9693       0.9681    \n",
+      "40       0.0794     0.9732       0.9725    \n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.9.6)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -235,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
