--- a/src/6.kalman.ipynb
+++ b/src/6.kalman.ipynb
@@ -137,76 +137,76 @@
      "text": [
       "RSSI   ETX   Delay  Busy   APMR   MFSR   IDG    Classe   Status   Confiança \n",
       "---------------------------------------------------------------------------\n",
-      "-43    3.8   33     0.15   0.72   0.63   0.48   1        Bom      0.78      \n",
-      "-78    4.8   3      0.23   0.79   0.60   0.72   1        Bom      0.73      \n",
-      "-59    1.5   28     0.21   0.77   0.89   0.70   1        Bom      0.81      \n",
-      "-82    7.1   15     0.83   0.87   0.90   0.79   1        Bom      0.71      \n",
-      "-68    9.7   37     0.72   0.58   0.55   0.48   1        Bom      0.61      \n",
-      "-64    8.2   64     0.86   0.86   0.91   0.75   1        Bom      0.59      \n",
-      "-82    5.7   36     0.83   0.93   0.89   0.69   1        Bom      0.58      \n",
-      "-64    6.7   98     0.78   0.56   0.76   0.67   1        Bom      0.55      \n",
-      "-50    1.1   9      0.29   0.94   0.87   0.68   1        Bom      0.60      \n",
-      "-46    2.1   33     0.39   0.94   0.88   0.72   1        Bom      0.65      \n",
-      "-64    8.5   98     0.63   0.78   0.91   0.70   1        Bom      0.63      \n",
-      "-40    2.7   30     0.10   0.54   0.77   0.53   1        Bom      0.65      \n",
-      "-44    3.3   10     0.38   0.80   0.87   0.69   1        Bom      0.67      \n",
-      "-48    2.6   18     0.18   0.90   0.93   0.84   1        Bom      0.70      \n",
-      "-55    1.0   15     0.35   0.86   0.88   0.73   1        Bom      0.73      \n",
-      "-39    2.8   11     0.34   0.88   0.94   0.72   1        Bom      0.75      \n",
-      "-57    4.5   29     0.52   0.54   0.77   0.50   1        Bom      0.72      \n",
-      "-65    3.0   25     0.29   0.90   0.95   0.84   1        Bom      0.74      \n",
-      "-81    8.8   53     0.67   0.82   0.86   0.79   1        Bom      0.72      \n",
-      "-90    8.1   90     0.98   0.62   0.73   0.67   1        Bom      0.69      \n",
-      "-76    5.1   31     0.36   0.58   0.55   0.53   1        Bom      0.66      \n",
-      "-62    3.3   37     0.39   0.72   0.84   0.78   1        Bom      0.67      \n",
-      "-63    10.0  28     0.96   0.51   0.77   0.51   1        Bom      0.64      \n",
-      "-56    1.8   28     0.26   0.90   0.83   0.68   1        Bom      0.66      \n",
-      "-54    1.2   36     0.21   0.90   0.89   0.77   1        Bom      0.69      \n",
-      "-58    4.1   26     1.00   0.88   0.92   0.79   1        Bom      0.67      \n",
-      "-80    7.6   42     0.50   0.68   0.74   0.48   1        Bom      0.65      \n",
-      "-81    7.5   92     0.78   0.61   0.53   0.66   1        Bom      0.62      \n",
-      "-71    8.3   85     0.65   0.92   0.91   0.89   1        Bom      0.61      \n",
-      "-77    3.6   62     0.77   0.85   0.87   0.87   1        Bom      0.60      \n",
-      "-35    3.5   22     0.19   0.51   0.50   0.60   1        Bom      0.61      \n",
-      "-70    8.9   28     0.66   0.69   0.71   0.64   1        Bom      0.59      \n",
-      "-50    5.1   23     0.09   0.81   0.64   0.66   1        Bom      0.62      \n",
-      "-34    2.6   32     0.34   0.52   0.62   0.46   1        Bom      0.63      \n",
-      "-69    9.1   48     0.28   0.68   0.61   0.57   1        Bom      0.60      \n",
-      "-77    9.3   80     0.54   0.80   0.72   0.61   1        Bom      0.59      \n",
-      "-82    6.7   32     0.30   0.94   0.85   0.84   1        Bom      0.58      \n",
-      "-64    3.4   32     0.07   0.76   0.89   0.84   1        Bom      0.61      \n",
-      "-57    8.4   39     0.57   0.80   0.85   0.72   1        Bom      0.60      \n",
-      "-82    7.1   63     0.83   0.92   0.86   0.76   1        Bom      0.59      \n",
-      "-59    3.4   11     0.27   0.65   0.60   0.67   1        Bom      0.61      \n",
-      "-81    5.6   25     0.97   0.61   0.57   0.57   1        Bom      0.59      \n",
-      "-43    2.1   21     0.30   0.59   0.57   0.61   1        Bom      0.60      \n",
-      "-62    6.0   28     0.72   0.54   0.65   0.50   1        Bom      0.58      \n",
-      "-77    4.2   21     0.12   0.89   0.93   0.81   1        Bom      0.61      \n",
-      "-62    7.8   39     0.98   0.80   0.95   0.70   1        Bom      0.60      \n",
-      "-70    5.7   69     0.37   0.68   0.52   0.59   1        Bom      0.57      \n",
-      "-67    3.3   28     0.72   0.70   0.64   0.63   1        Bom      0.56      \n",
-      "-56    2.3   9      0.25   0.52   0.71   0.65   1        Bom      0.58      \n",
-      "-49    3.5   8      0.34   0.94   0.86   0.75   1        Bom      0.61      \n",
-      "-79    4.4   96     0.58   0.71   0.59   0.62   1        Bom      0.59      \n",
-      "-42    2.4   19     0.32   0.90   0.91   0.69   1        Bom      0.62      \n",
-      "-41    1.6   6      0.19   0.78   0.83   0.86   1        Bom      0.65      \n",
-      "-48    1.8   38     0.12   0.76   0.77   0.88   1        Bom      0.67      \n",
-      "-69    2.8   23     0.22   0.75   0.95   0.82   1        Bom      0.69      \n",
-      "-65    3.8   3      0.30   0.47   0.68   0.51   1        Bom      0.69      \n",
-      "-83    5.9   9      0.57   0.79   0.84   0.86   1        Bom      0.68      \n",
-      "-60    7.5   39     0.63   0.46   0.51   0.47   1        Bom      0.64      \n",
-      "-58    5.0   92     0.70   0.66   0.73   0.47   1        Bom      0.62      \n",
-      "-61    1.1   19     0.31   0.79   0.91   0.70   1        Bom      0.64      \n",
-      "-35    1.7   22     0.04   0.46   0.66   0.59   1        Bom      0.65      \n",
-      "-80    5.0   63     0.54   0.82   0.86   0.72   1        Bom      0.64      \n",
-      "-86    9.8   87     0.82   0.90   0.92   0.77   1        Bom      0.63      \n",
-      "-44    2.3   9      0.33   0.87   0.83   0.81   1        Bom      0.65      \n",
-      "-61    2.1   30     0.04   0.58   0.51   0.53   1        Bom      0.66      \n",
-      "-78    6.2   94     0.40   0.48   0.59   0.53   1        Bom      0.63      \n",
-      "-88    5.7   70     0.89   0.57   0.65   0.65   1        Bom      0.60      \n",
-      "-35    2.9   9      0.08   0.52   0.63   0.62   1        Bom      0.62      \n",
-      "-63    3.4   7      0.37   0.61   0.57   0.60   1        Bom      0.63      \n",
-      "-79    1.0   3      0.23   0.52   0.72   0.54   1        Bom      0.64      \n"
+      "-74    3.7   91     0.31   0.79   0.94   0.85   1        Bom      0.52      \n",
+      "-31    1.7   29     0.06   0.77   0.76   0.78   1        Bom      0.86      \n",
+      "-68    4.0   96     0.70   0.94   0.85   0.90   1        Bom      0.70      \n",
+      "-51    1.5   17     0.25   0.47   0.66   0.59   1        Bom      0.71      \n",
+      "-46    1.1   17     0.38   0.81   0.87   0.71   1        Bom      0.76      \n",
+      "-80    7.4   92     0.65   0.84   0.85   0.77   1        Bom      0.70      \n",
+      "-39    1.1   15     0.04   0.67   0.70   0.63   1        Bom      0.72      \n",
+      "-57    7.9   96     0.61   0.64   0.64   0.65   1        Bom      0.67      \n",
+      "-67    3.9   57     0.25   0.79   0.84   0.68   1        Bom      0.66      \n",
+      "-62    8.6   83     0.43   0.57   0.67   0.50   1        Bom      0.62      \n",
+      "-49    2.7   33     0.28   0.90   0.77   0.90   1        Bom      0.65      \n",
+      "-62    8.1   80     0.52   0.83   0.89   0.89   1        Bom      0.64      \n",
+      "-56    2.0   14     0.11   0.74   0.73   0.71   1        Bom      0.66      \n",
+      "-78    7.3   66     0.53   0.88   0.86   0.71   1        Bom      0.64      \n",
+      "-54    1.9   7      0.34   0.62   0.63   0.48   1        Bom      0.65      \n",
+      "-71    8.7   46     0.85   0.90   0.75   0.70   1        Bom      0.64      \n",
+      "-36    2.4   4      0.18   0.94   0.86   0.72   1        Bom      0.67      \n",
+      "-64    9.7   99     0.51   0.63   0.58   0.67   1        Bom      0.64      \n",
+      "-56    3.2   4      0.33   0.57   0.67   0.64   1        Bom      0.65      \n",
+      "-45    3.8   37     0.38   0.78   0.95   0.73   1        Bom      0.67      \n",
+      "-68    3.7   84     0.60   0.78   0.84   0.73   1        Bom      0.65      \n",
+      "-45    3.9   33     0.28   0.73   0.74   0.68   1        Bom      0.67      \n",
+      "-68    8.9   74     0.32   0.76   0.91   0.68   1        Bom      0.65      \n",
+      "-65    4.2   100    0.63   0.91   0.83   0.89   1        Bom      0.64      \n",
+      "-44    3.2   8      0.07   0.87   0.82   0.78   1        Bom      0.66      \n",
+      "-71    9.2   88     0.46   0.49   0.55   0.53   1        Bom      0.63      \n",
+      "-74    6.1   38     0.45   0.55   0.53   0.53   1        Bom      0.60      \n",
+      "-67    9.9   89     0.56   0.46   0.60   0.59   1        Bom      0.57      \n",
+      "-75    4.8   78     0.29   0.60   0.67   0.53   1        Bom      0.56      \n",
+      "-57    5.2   83     0.29   0.82   0.93   0.86   1        Bom      0.55      \n",
+      "-50    2.4   9      0.07   0.65   0.55   0.68   1        Bom      0.58      \n",
+      "-68    4.8   55     0.62   0.51   0.53   0.64   1        Bom      0.55      \n",
+      "-80    3.6   83     0.70   0.62   0.63   0.56   1        Bom      0.53      \n",
+      "-66    9.8   100    0.49   0.46   0.55   0.64   1        Bom      0.51      \n",
+      "-71    9.0   86     0.45   0.77   0.83   0.87   1        Bom      0.51      \n",
+      "-33    1.9   8      0.17   0.94   0.86   0.82   1        Bom      0.55      \n",
+      "-34    3.9   14     0.25   0.58   0.61   0.63   1        Bom      0.57      \n",
+      "-42    2.1   10     0.07   0.52   0.53   0.55   1        Bom      0.58      \n",
+      "-90    8.7   92     0.38   0.51   0.52   0.66   1        Bom      0.56      \n",
+      "-86    8.7   76     0.38   0.80   0.88   0.76   1        Bom      0.55      \n",
+      "-62    7.5   8      0.74   0.54   0.68   0.62   1        Bom      0.54      \n",
+      "-64    7.5   97     0.88   0.53   0.53   0.60   1        Bom      0.52      \n",
+      "-56    7.3   30     0.68   0.71   0.62   0.52   1        Bom      0.50      \n",
+      "-69    3.5   32     0.29   0.56   0.74   0.53   1        Bom      0.52      \n",
+      "-67    2.4   23     0.14   0.89   0.95   0.90   1        Bom      0.56      \n",
+      "-85    3.9   30     0.96   0.83   0.82   0.77   1        Bom      0.55      \n",
+      "-67    7.5   56     0.78   0.84   0.80   0.81   1        Bom      0.55      \n",
+      "-74    6.5   33     0.36   0.72   0.72   0.80   1        Bom      0.54      \n",
+      "-70    6.8   82     0.59   0.73   0.67   0.56   1        Bom      0.53      \n",
+      "-56    3.9   29     0.08   0.86   0.78   0.70   1        Bom      0.56      \n",
+      "-44    3.7   14     0.27   0.78   0.94   0.87   1        Bom      0.59      \n",
+      "-81    9.8   79     0.68   0.73   0.65   0.58   1        Bom      0.58      \n",
+      "-61    1.6   20     0.09   0.63   0.68   0.66   1        Bom      0.60      \n",
+      "-46    3.3   37     0.08   0.90   0.89   0.70   1        Bom      0.63      \n",
+      "-37    1.7   8      0.32   0.51   0.62   0.64   1        Bom      0.64      \n",
+      "-65    3.4   85     0.60   0.64   0.64   0.60   1        Bom      0.61      \n",
+      "-45    4.9   2      0.08   0.75   0.53   0.68   1        Bom      0.63      \n",
+      "-31    3.4   6      0.30   0.77   0.83   0.74   1        Bom      0.65      \n",
+      "-32    1.7   16     0.11   0.66   0.54   0.55   1        Bom      0.66      \n",
+      "-56    1.1   19     0.08   0.80   0.82   0.82   1        Bom      0.68      \n",
+      "-35    3.5   4      0.39   0.55   0.68   0.66   1        Bom      0.69      \n",
+      "-45    3.7   7      0.38   0.93   0.95   0.88   1        Bom      0.72      \n",
+      "-44    1.9   19     0.06   0.50   0.65   0.66   1        Bom      0.72      \n",
+      "-34    2.6   15     0.23   0.52   0.52   0.58   1        Bom      0.72      \n",
+      "-48    2.1   23     0.03   0.79   0.93   0.81   1        Bom      0.74      \n",
+      "-58    2.5   40     0.28   0.88   0.91   0.81   1        Bom      0.75      \n",
+      "-54    3.1   31     0.21   0.84   0.85   0.75   1        Bom      0.77      \n",
+      "-53    2.8   10     0.26   0.89   0.93   0.75   1        Bom      0.78      \n",
+      "-42    1.1   27     0.01   0.87   0.88   0.84   1        Bom      0.79      \n",
+      "-49    2.3   11     0.34   0.80   0.93   0.90   1        Bom      0.81      \n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.9.6)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
