--- a/src/1.dataset.ipynb
+++ b/src/1.dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "893c315d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "0d5c7004",
    "metadata": {},
    "outputs": [],
@@ -49,58 +49,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "85f2754e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def generate_realistic_edge(is_good_link):\n",
+    "    if is_good_link:\n",
+    "        rssi_mean = -55\n",
+    "        rssi_std = 8\n",
+    "        rssi = np.random.normal(rssi_mean, rssi_std)\n",
+    "        rssi = np.clip(rssi, -85, -30)\n",
+    "        \n",
+    "        etx = 1 + np.random.exponential(0.8)\n",
+    "        etx = np.clip(etx, 1, 8)\n",
+    "        \n",
+    "        delay = np.random.lognormal(2.3, 0.6)\n",
+    "        delay = np.clip(delay, 1, 80)\n",
+    "        \n",
+    "        busy = np.random.beta(2, 5)\n",
+    "        busy = np.clip(busy, 0.05, 0.7)\n",
+    "        \n",
+    "    else:\n",
+    "        rssi_mean = -75\n",
+    "        rssi_std = 10\n",
+    "        rssi = np.random.normal(rssi_mean, rssi_std)\n",
+    "        rssi = np.clip(rssi, -95, -45)\n",
+    "        \n",
+    "        etx = 1 + np.random.gamma(3, 1.2)\n",
+    "        etx = np.clip(etx, 1.5, 15)\n",
+    "        \n",
+    "        delay = np.random.lognormal(3.5, 0.8)\n",
+    "        delay = np.clip(delay, 10, 150)\n",
+    "        \n",
+    "        busy = np.random.beta(5, 2)\n",
+    "        busy = np.clip(busy, 0.1, 1.0)\n",
+    "    \n",
+    "    rssi += np.random.uniform(-0.05, 0.05)\n",
+    "    etx += np.random.uniform(-0.01, 0.01)\n",
+    "    delay += np.random.uniform(-0.2, 0.2)\n",
+    "    busy += np.random.uniform(-0.005, 0.005)\n",
+    "    \n",
+    "    rssi = np.clip(rssi, -95, -30)\n",
+    "    etx = np.clip(etx, 1.0, 15)\n",
+    "    delay = np.clip(delay, 1, 150)\n",
+    "    busy = np.clip(busy, 0.0, 1.0)\n",
+    "    \n",
+    "    if rssi < -70:\n",
+    "        etx *= np.random.uniform(1.1, 1.4)\n",
+    "        delay *= np.random.uniform(1.05, 1.25)\n",
+    "        etx = min(etx, 15)\n",
+    "    \n",
+    "    if busy > 0.6:\n",
+    "        delay *= np.random.uniform(1.2, 1.6)\n",
+    "        etx *= np.random.uniform(1.05, 1.2)\n",
+    "        delay = min(delay, 150)\n",
+    "        etx = min(etx, 15)\n",
+    "    \n",
+    "    if etx > 7:\n",
+    "        delay *= np.random.uniform(1.1, 1.3)\n",
+    "        delay = min(delay, 150)\n",
+    "    \n",
+    "    rssi = round(rssi, 2)\n",
+    "    etx = round(etx, 3)\n",
+    "    delay = round(delay, 2)\n",
+    "    busy = round(busy, 4)\n",
+    "    \n",
+    "    return rssi, etx, delay, busy\n",
+    "\n",
+    "\n",
     "edges = []\n",
     "label_0_count = 0\n",
     "label_1_count = 0\n",
     "target_per_label = num_edges // 2\n",
     "\n",
+    "existing_edges = set()\n",
+    "\n",
     "while len(edges) < num_edges:\n",
     "    src = np.random.randint(0, num_nodes)\n",
     "    dest = np.random.randint(0, num_nodes)\n",
-    "    if src == dest:  # evitar laços\n",
+    "    \n",
+    "    if src == dest or (src, dest) in existing_edges or (dest, src) in existing_edges:\n",
     "        continue\n",
     "    \n",
-    "    # Decidir qual label gerar para manter equilíbrio\n",
+    "    existing_edges.add((src, dest))\n",
+    "    \n",
     "    if label_0_count >= target_per_label:\n",
     "        target_label = 1\n",
     "    elif label_1_count >= target_per_label:\n",
     "        target_label = 0\n",
     "    else:\n",
-    "        target_label = np.random.randint(0, 2)\n",
+    "        target_label = 1 if np.random.random() < 0.52 else 0\n",
     "    \n",
-    "    # Gerar metricas baseadas no target_label\n",
-    "    if target_label == 1:  # aresta boa\n",
-    "        rssi = np.random.uniform(-65, -30)    # sinal mais forte\n",
-    "        etx = np.random.uniform(1, 4)         # menos retransmissões\n",
-    "        delay = np.random.uniform(1, 40)      # menor delay\n",
-    "        busy = np.random.uniform(0, 0.4)      # menos ocupado\n",
-    "    else:  # aresta ruim\n",
-    "        rssi = np.random.uniform(-90, -55)    # sinal mais fraco\n",
-    "        etx = np.random.uniform(3, 10)        # mais retransmissões\n",
-    "        delay = np.random.uniform(25, 100)    # maior delay\n",
-    "        busy = np.random.uniform(0.25, 1)     # mais ocupado\n",
+    "    is_good = (target_label == 1)\n",
     "    \n",
-    "    # Adicionar alguma variação para não ficar muito determinístico\n",
-    "    noise_factor = 0.30\n",
-    "    if np.random.random() < noise_factor:\n",
-    "        # Ocasionalmente criar uma exceção para adicionar realismo\n",
-    "        if target_label == 1:\n",
-    "            # Tornar algumas metricas piores\n",
-    "            if np.random.random() < 0.5:\n",
-    "                rssi = np.random.uniform(-80, -60)\n",
-    "            if np.random.random() < 0.5:\n",
-    "                etx = np.random.uniform(2, 6)\n",
-    "        else:\n",
-    "            # Tornar algumas metricas melhores\n",
-    "            if np.random.random() < 0.5:\n",
-    "                rssi = np.random.uniform(-70, -40)\n",
-    "            if np.random.random() < 0.5:\n",
-    "                delay = np.random.uniform(5, 50)\n",
+    "    rssi, etx, delay, busy = generate_realistic_edge(is_good)\n",
     "    \n",
     "    label = target_label\n",
     "    \n",
@@ -122,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "ab18ade9",
    "metadata": {},
    "outputs": [
