--- a/src/3.inputs.ipynb
+++ b/src/3.inputs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "6cad41f7",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "fb855109",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "23e0ea91",
    "metadata": {},
    "outputs": [],
@@ -143,56 +143,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "b71a351d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_realistic_radnet_metrics(is_good_performance):\n",
     "    if is_good_performance:\n",
-    "        apmr_global = np.random.beta(9, 2)\n",
-    "        apmr_global = 0.75 + (apmr_global * 0.20)\n",
-    "        \n",
-    "        mfsr_global = np.random.beta(10, 2)\n",
-    "        mfsr_global = 0.80 + (mfsr_global * 0.16)\n",
-    "        \n",
-    "        idg_global = np.random.beta(8, 3)\n",
-    "        idg_global = 0.68 + (idg_global * 0.24)\n",
+    "        efsr_edge = np.random.beta(9, 2)\n",
+    "        efsr_edge = 0.70 + (efsr_edge * 0.25)\n",
     "        \n",
     "    else:\n",
-    "        apmr_global = np.random.beta(3, 6)\n",
-    "        apmr_global = 0.45 + (apmr_global * 0.32)\n",
-    "        \n",
-    "        mfsr_global = np.random.beta(3, 5)\n",
-    "        mfsr_global = 0.48 + (mfsr_global * 0.35)\n",
-    "        \n",
-    "        idg_global = np.random.beta(2, 6)\n",
-    "        idg_global = 0.42 + (idg_global * 0.32)\n",
+    "        efsr_edge = np.random.beta(3, 6)\n",
+    "        efsr_edge = 0.25 + (efsr_edge * 0.35)\n",
     "    \n",
-    "    apmr_global += np.random.uniform(-0.01, 0.01)\n",
-    "    mfsr_global += np.random.uniform(-0.01, 0.01)\n",
-    "    idg_global += np.random.uniform(-0.01, 0.01)\n",
+    "    efsr_edge += np.random.uniform(-0.02, 0.02)\n",
     "    \n",
-    "    apmr_global = np.clip(apmr_global, 0.40, 0.98)\n",
-    "    mfsr_global = np.clip(mfsr_global, 0.45, 0.98)\n",
-    "    idg_global = np.clip(idg_global, 0.40, 0.95)\n",
+    "    efsr_edge = np.clip(efsr_edge, 0.20, 0.98)\n",
     "    \n",
-    "    if mfsr_global < apmr_global:\n",
-    "        mfsr_global = apmr_global * np.random.uniform(1.0, 1.08)\n",
-    "        mfsr_global = min(mfsr_global, 0.98)\n",
+    "    efsr_edge = round(efsr_edge, 6)\n",
     "    \n",
-    "    if apmr_global < 0.55:\n",
-    "        mfsr_global *= np.random.uniform(0.85, 0.95)\n",
-    "        idg_global *= np.random.uniform(0.88, 0.96)\n",
-    "    \n",
-    "    if mfsr_global < 0.60:\n",
-    "        idg_global *= np.random.uniform(0.82, 0.93)\n",
-    "    \n",
-    "    apmr_global = round(apmr_global, 6)\n",
-    "    mfsr_global = round(mfsr_global, 6)\n",
-    "    idg_global = round(idg_global, 4)\n",
-    "    \n",
-    "    return apmr_global, mfsr_global, idg_global\n",
+    "    return efsr_edge\n",
     "\n",
     "radnet_inputs = []\n",
     "good_performance_count = 0\n",
@@ -208,14 +179,14 @@
     "        target_performance = 1 if np.random.random() < 0.52 else 0\n",
     "    \n",
     "    is_good = (target_performance == 1)\n",
-    "    apmr_g, mfsr_g, idg_g = generate_realistic_radnet_metrics(is_good)\n",
+    "    efsr = generate_realistic_radnet_metrics(is_good)\n",
     "    \n",
     "    if target_performance == 0:\n",
     "        poor_performance_count += 1\n",
     "    else:\n",
     "        good_performance_count += 1\n",
     "    \n",
-    "    radnet_inputs.append([apmr_g, mfsr_g, idg_g])"
+    "    radnet_inputs.append([efsr])"
    ]
   },
   {
@@ -228,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "e4db4e90",
    "metadata": {},
    "outputs": [
@@ -250,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "02880e56",
    "metadata": {},
    "outputs": [
@@ -263,7 +234,7 @@
     }
    ],
    "source": [
-    "radnet_input = pd.DataFrame(radnet_inputs, columns=[\"apmr_edge\", \"mfsr_edge\", \"idg_global\"])\n",
+    "radnet_input = pd.DataFrame(radnet_inputs, columns=[\"efsr_edge\"])\n",
     "os.makedirs(\"../inputs\", exist_ok=True)\n",
     "radnet_input.to_csv(\"../inputs/radnet_input.csv\", index=False)\n",
     "\n",
