--- a/src/5.fusion.ipynb
+++ b/src/5.fusion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "57301dc5",
    "metadata": {},
    "outputs": [],
@@ -30,35 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "46ca6451",
    "metadata": {},
    "outputs": [],
    "source": [
     "radnet_input_df = pd.read_csv(\"../inputs/radnet_input.csv\")\n",
-    "radnet_input_apmr_edge = radnet_input_df['apmr_edge'].values\n",
-    "radnet_input_mfsr_edge = radnet_input_df['mfsr_edge'].values\n",
-    "radnet_input_idg_global = radnet_input_df['idg_global'].values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "73c9d8ea",
-   "metadata": {},
-   "source": [
-    "- apmr_edge (Active Prefix Message Ratio): Taxa de eficiência dos Active Prefixes no encaminhamento de mensagens através das arestas, \n",
-    "medindo quão bem os campos de prefixo conseguem realizar matching probabilístico para encaminhar mensagens entre nós vizinhos.\n",
-    "\n",
-    "- mfsr_edge (Message Forwarding Success Ratio): Proporção de mensagens transmitidas com sucesso através de uma aresta específica, \n",
-    "considerando interferência, congestionamento e qualidade da conexão sem fio entre dois nós conectados.\n",
-    "\n",
-    "- idg_global (Interest Group Delivery): Eficácia global da entrega de mensagens no modo Interest-Group addressing, \n",
-    "medindo quão bem o protocolo consegue localizar e entregar mensagens aos nós que compartilham o mesmo interesse da aplicação."
+    "radnet_input_efsr_edge = radnet_input_df['efsr_edge'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "231f6b80",
    "metadata": {},
    "outputs": [],
@@ -69,16 +52,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "61516e69",
-   "metadata": {},
-   "source": [
-    "- confidence (Confiança da Inferência do Modelo GNN): Eficácia do modelo gerado pelo GNN medido na atapa anterior."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "d0d0907d",
    "metadata": {},
    "outputs": [],
@@ -97,19 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "47271a35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pesos podenrados\n",
-    "w_model, w_apmr, w_mfsr, w_idg = 0.4, 0.25, 0.25, 0.1\n",
-    "w_sum = w_model + w_apmr + w_mfsr + w_idg"
+    "w_model, w_efsr = 0.4, 0.6\n",
+    "w_sum = w_model + w_efsr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "b77885fb",
    "metadata": {},
    "outputs": [],
@@ -122,30 +96,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "ab9a9633",
    "metadata": {},
    "outputs": [],
    "source": [
     "fused = (\n",
     "    w_model * confidence_model +\n",
-    "    w_apmr * radnet_input_apmr_edge +\n",
-    "    w_mfsr * radnet_input_mfsr_edge +\n",
-    "    w_idg  * radnet_input_idg_global\n",
+    "    w_efsr * radnet_input_efsr_edge\n",
     ") / w_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "eb83c414",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# classe final a partir do filtrado\n",
     "cls = (fused >= 0.5).astype(int)\n",
-    "\n",
-    "# confiança orientada à classe escolhida\n",
     "conf = np.where(cls == 1, fused, 1.0 - fused)"
    ]
   },
@@ -159,19 +128,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "9d3291bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSSI   ETX   Delay  Busy   EFSR   Classe   Status   Confiança \n",
+      "--------------------------------------------------------------\n",
+      "-75    6.1   77     0.87   0.43   0        Ruim     0.74      \n",
+      "-54    2.7   19     0.41   0.91   1        Bom      0.93      \n",
+      "-81    4.8   127    0.89   0.79   0        Ruim     0.53      \n",
+      "-56    2.3   14     0.41   0.95   1        Bom      0.96      \n",
+      "-79    4.8   18     0.85   0.92   1        Bom      0.56      \n",
+      "-61    1.5   6      0.27   0.91   1        Bom      0.94      \n",
+      "-66    4.5   79     0.87   0.39   0        Ruim     0.76      \n",
+      "-49    1.8   6      0.40   0.92   1        Bom      0.95      \n",
+      "-95    3.8   148    0.34   0.43   0        Ruim     0.74      \n",
+      "-55    1.6   11     0.29   0.88   1        Bom      0.92      \n",
+      "-49    1.1   7      0.55   0.91   1        Bom      0.94      \n",
+      "-72    6.3   99     0.79   0.93   1        Bom      0.56      \n",
+      "-95    9.8   79     0.92   0.93   1        Bom      0.56      \n",
+      "-82    3.9   34     0.69   0.93   1        Bom      0.56      \n",
+      "-46    1.0   17     0.24   0.90   1        Bom      0.94      \n",
+      "-88    2.7   69     0.66   0.93   1        Bom      0.56      \n",
+      "-68    9.6   21     0.56   0.91   1        Bom      0.55      \n",
+      "-63    2.9   23     0.38   0.34   1        Bom      0.57      \n",
+      "-70    2.8   11     0.31   0.43   1        Bom      0.63      \n",
+      "-48    1.5   15     0.14   0.92   1        Bom      0.95      \n",
+      "-49    1.4   32     0.56   0.39   1        Bom      0.62      \n",
+      "-74    9.7   67     0.79   0.93   1        Bom      0.56      \n",
+      "-76    10.7  106    0.85   0.88   1        Bom      0.53      \n",
+      "-67    1.3   10     0.22   0.90   1        Bom      0.93      \n",
+      "-60    1.6   8      0.36   0.36   1        Bom      0.61      \n",
+      "-64    1.2   19     0.07   0.91   1        Bom      0.94      \n",
+      "-54    1.3   10     0.22   0.92   1        Bom      0.95      \n",
+      "-61    1.4   14     0.50   0.41   1        Bom      0.63      \n",
+      "-81    3.4   35     0.79   0.94   1        Bom      0.56      \n",
+      "-62    1.6   17     0.55   0.34   1        Bom      0.56      \n",
+      "-55    1.1   9      0.45   0.37   1        Bom      0.62      \n",
+      "-52    8.0   27     0.82   0.86   1        Bom      0.52      \n",
+      "-60    1.2   15     0.66   0.91   1        Bom      0.88      \n",
+      "-61    2.9   21     0.28   0.33   1        Bom      0.58      \n",
+      "-63    2.0   19     0.16   0.28   1        Bom      0.56      \n",
+      "-61    1.4   2      0.18   0.43   1        Bom      0.65      \n",
+      "-79    3.5   26     0.79   0.37   0        Ruim     0.78      \n",
+      "-64    6.6   42     0.65   0.47   0        Ruim     0.72      \n",
+      "-83    7.8   124    0.65   0.91   1        Bom      0.55      \n",
+      "-47    4.2   4      0.29   0.90   1        Bom      0.94      \n",
+      "-46    1.7   26     0.27   0.31   1        Bom      0.58      \n",
+      "-65    1.3   6      0.26   0.33   1        Bom      0.59      \n",
+      "-65    4.3   68     0.54   0.50   0        Ruim     0.69      \n",
+      "-83    6.5   86     0.70   0.33   0        Ruim     0.80      \n",
+      "-73    4.4   67     0.85   0.38   0        Ruim     0.77      \n",
+      "-61    4.7   54     0.75   0.35   0        Ruim     0.79      \n",
+      "-83    9.2   62     0.63   0.42   0        Ruim     0.75      \n",
+      "-88    4.1   61     0.73   0.29   0        Ruim     0.83      \n",
+      "-77    5.3   95     0.66   0.36   0        Ruim     0.79      \n",
+      "-77    5.5   21     0.54   0.48   0        Ruim     0.71      \n"
+     ]
+    }
+   ],
    "source": [
-    "print(f\"{'RSSI':<6} {'ETX':<5} {'Delay':<6} {'Busy':<6} {'APMR':<6} {'MFSR':<6} {'IDG':<6} {'Classe':<8} {'Status':<8} {'Confiança':<10}\")\n",
-    "print(f\"{'-'*70}\")\n",
+    "print(f\"{'RSSI':<6} {'ETX':<5} {'Delay':<6} {'Busy':<6} {'EFSR':<6} {'Classe':<8} {'Status':<8} {'Confiança':<10}\")\n",
+    "print(f\"{'-'*62}\")\n",
     "\n",
     "CLASS_NAMES = {0: \"Ruim\", 1: \"Bom\"}\n",
     "\n",
     "for i, row in enumerate(edges_input):\n",
     "    print(f\"{row[0]:<6.0f} {row[1]:<5.1f} {row[2]:<6.0f} {row[3]:<6.2f} \"\n",
-    "          f\"{radnet_input_apmr_edge[i]:<6.2f} {radnet_input_mfsr_edge[i]:<6.2f} {radnet_input_idg_global[i]:<6.2f} \"\n",
+    "          f\"{radnet_input_efsr_edge[i]:<6.2f} \"\n",
     "          f\"{cls[i]:<8} {CLASS_NAMES[int(cls[i])]:<8} {conf[i]:<10.2f}\")"
    ]
   },
@@ -185,10 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "f9257d18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fusão de Dados salva em ../outputs/fusion_output.csv\n"
+     ]
+    }
+   ],
    "source": [
     "fusion_output = pd.DataFrame({\n",
     "    'class': cls,\n",
