--- a/src/6.kalman.ipynb
+++ b/src/6.kalman.ipynb
@@ -59,9 +59,7 @@
    "outputs": [],
    "source": [
     "radnet_input_df = pd.read_csv(\"../inputs/radnet_input.csv\")\n",
-    "radnet_input_apmr_edge = radnet_input_df['apmr_edge'].values\n",
-    "radnet_input_mfsr_edge = radnet_input_df['mfsr_edge'].values\n",
-    "radnet_input_idg_global = radnet_input_df['idg_global'].values"
+    "radnet_input_efsr_edge = radnet_input_df['efsr_edge'].values"
    ]
   },
   {
@@ -132,14 +130,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{'RSSI':<6} {'ETX':<5} {'Delay':<6} {'Busy':<6} {'APMR':<6} {'MFSR':<6} {'IDG':<6} {'Classe':<8} {'Status':<8} {'Confiança':<10}\")\n",
+    "print(f\"{'RSSI':<6} {'ETX':<5} {'Delay':<6} {'Busy':<6} {'EFSR':<6} {'Classe':<8} {'Status':<8} {'Confiança':<10}\")\n",
     "print(f\"{'-'*75}\")\n",
     "\n",
     "CLASS_NAMES = {0: \"Ruim\", 1: \"Bom\"}\n",
     "\n",
     "for i, row in enumerate(edges_input):\n",
     "    print(f\"{row[0]:<6.0f} {row[1]:<5.1f} {row[2]:<6.0f} {row[3]:<6.2f} \"\n",
-    "          f\"{radnet_input_apmr_edge[i]:<6.2f} {radnet_input_mfsr_edge[i]:<6.2f} {radnet_input_idg_global[i]:<6.2f} \"\n",
+    "          f\"{radnet_input_efsr_edge[i]:<6.2f} \"\n",
     "          f\"{cls[i]:<8} {CLASS_NAMES[int(cls[i])]:<8} {conf[i]:<10.2f}\")"
    ]
   },
